--- a/scripts/install
+++ b/scripts/install
@@ -50,8 +50,10 @@ fi
 
 mkdir -p /etc/coolwsd
 ynh_config_add --template="coolwsd.xml" --destination="/etc/coolwsd/coolwsd.xml"
+ynh_config_add --template="collabora.env" --destination="/etc/coolwsd/.env"
 
 chmod 640 "/etc/coolwsd/coolwsd.xml"
+chmod 640 "/etc/coolwsd/.env"
 chown cool:root -R /etc/coolwsd
 
 #=================================================
