--- a/scripts/install
+++ b/scripts/install
@@ -64,7 +64,7 @@ ynh_script_progression "Adding system configurations related to $app..."
 # Create a dedicated NGINX config using the conf/nginx.conf template
 ynh_config_add_nginx
 
-# yunohost service add "coolwsd" --description="Collabora online office suite" --log="/var/log/$app/$app.log"
+yunohost service add "coolwsd" --description="Collabora online office suite" --log="/var/log/$app/$app.log"
 
 #=================================================
 # START SYSTEMD SERVICE
